--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
+
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
@@ -18,6 +20,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
     "openai": "^6.3.0",
     "pg": "^8.16.3",
     "react-router-dom": "^7.9.4",
